fixed spacing on .contact

--- a/mashup.css
+++ b/mashup.css
@@ -12,7 +12,6 @@ body{
 nav{
 	height: 10vh;
 	background: #eee;
-
 } 
 
 .nav-links{
@@ -60,7 +59,7 @@ nav{
 }
 
 .section-title{
-	font-size: 3em;
+	font-size: 4.5em;
 	margin: 20px;
 }
 
@@ -209,16 +208,18 @@ input{
 	height: 50px;
 	text-align: center;
 	font-size: 1.4em;
-	margin: 10px;
+	margin-bottom: 10px;
+	border: 1px solid gray;
 }
+
 textarea{
-    height: 200px;
+    	height: 200px;
 	text-align: center;
 	width: 100%;
-    resize: none;
+   	resize: none;
 	font-size: 1.4em;
-    border: 0px;
-
+    	border: 1px solid gray;
+	margin-bottom: 10px;
 }
 
 button{
@@ -227,8 +228,8 @@ button{
 	background: black;
 	color: #eee;
 	margin: 10px;
-    font-size: 1.5em;
-    cursor: pointer
+    	font-size: 1.5em;
+    	cursor: pointer
 }
 
 button:hover{
